Uploaded with Glitch

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <title>CAMERON CLAYBORN</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Expires" content="-1" />   
+  
   <link rel="stylesheet" href="circle.css">
   <link rel="icon" type="image/png" href="https://i.imgur.com/Zrez91P.png">
 
